style(AppGrid): Fix horizontal and vertical overflow issues

--- a/src/global.css
+++ b/src/global.css
@@ -78,6 +78,13 @@ body {
   /* NOTE(nicholas-ramsey): Radix's sheet forcefully sets the `pointer-events` attribute to `none`.
      This is a workaround. See: https://github.com/radix-ui/primitives/issues/2122 */
   pointer-events: all !important;
+  overflow-y: hidden;
+}
+
+#root {
+  display: flex;
+  flex: 1;
+  height: 100vh;
 }
 
 #app-header,
@@ -91,11 +98,14 @@ body {
 #app-grid {
   background: hsl(var(--card));
   border: 1px solid hsl(var(--accent));
+  margin: theme('spacing.1');
 }
 
 #app-container {
-  margin: theme('spacing.1');
   position: relative;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
 #app-header {
